// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProfileSkeleton variant="compact" renders compact skeleton structure 1`] = `
<div
  aria-atomic="true"
  aria-busy="true"
  aria-label="Loading section data"
  aria-live="polite"
  class="w-full space-y-4 p-4"
  role="status"
>
  <div
    class="flex items-center gap-4"
  >
    <div
      aria-hidden="true"
      class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted rounded-full h-12 w-12"
      role="presentation"
    />
    <div
      class="space-y-2"
    >
      <div
        aria-hidden="true"
        class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted h-7 w-48 rounded"
        role="presentation"
      />
      <div
        aria-hidden="true"
        class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted h-5 w-20 rounded"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`ProfileSkeleton variant="full" (default) renders full skeleton structure 1`] = `
<div
  aria-atomic="true"
  aria-busy="true"
  aria-label="Loading your profile"
  aria-live="polite"
  class="mx-auto max-w-4xl space-y-6 pb-16"
  role="status"
>
  <div
    class="rounded-xl border border-border/60 bg-card p-5 sm:p-6 shadow-xs"
  >
    <div
      class="flex flex-col sm:flex-row items-center sm:items-start gap-5"
    >
      <div
        aria-hidden="true"
        class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted rounded-full h-16 w-16 sm:h-20 sm:w-20"
        role="presentation"
      />
      <div
        class="space-y-2 flex-1 w-full"
      >
        <div
          aria-hidden="true"
          class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted h-7 w-48 rounded"
          role="presentation"
        />
        <div
          class="flex items-center gap-2"
        >
          <div
            aria-hidden="true"
            class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted rounded-full h-5 w-20"
            role="presentation"
          />
          <div
            aria-hidden="true"
            class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted h-4 w-36 rounded"
            role="presentation"
          />
        </div>
        <div
          aria-hidden="true"
          class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted h-9 w-full max-w-xl rounded-lg mt-2"
          role="presentation"
        />
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted h-12 w-full rounded-xl"
    role="presentation"
  />
  <div
    aria-hidden="true"
    class="motion-safe:animate-pulse motion-reduce:opacity-50 bg-muted h-4 min-h-[300px] md:min-h-[360px] w-full rounded-xl"
    role="presentation"
  />
</div>
`;
